Added shader support,  basic vertex structure, file loading

--- a/Code_Example/makefile
+++ b/Code_Example/makefile
@@ -3,7 +3,7 @@ FDIR =/Library/Frameworks
 CC=gcc
 CFLAGS=-I$(IDIR) -F$(FDIR)
 
-objects = main.o
+objects = main.o up_shader_module.o up_vertex.o up_filereader.o
 
 gltestapp : $(objects)
 	gcc -o glTestapp $(CFLAGS) -framework SDL2 -framework opengl $(objects)
