Updated make file to include linux and osx and windows

--- a/Code_Example/functionality_testbed/makefile
+++ b/Code_Example/functionality_testbed/makefile
@@ -1,9 +1,19 @@
 IDIR =/Library/Frameworks/SDL2.framework/Header
 FDIR =/Library/Frameworks
 CC=gcc
-CFLAGS=-I$(IDIR) -F$(FDIR)
+ifeq ($(OS),Windows_NT)
+	CFLAGS=-lmingw32 -lSDL2main -lSDL2 -lSDL2_image -lglew32 -lglew32s
+else
+	UNAME_S := $(shell uname -s)
+	ifeq ($(UNAME_S),Linux)
+		CFLAGS=-lSDL2 -lGLEW -lGL
+	endif
+	ifeq ($(UNAME_S),Darwin)
+		CFLAGS=-I$(IDIR) -F$(FDIR) -framework SDL2 -framework opengl
+	endif
+endif
 
 objects = main.o up_shader_module.o up_vertex.o up_filereader.o
 
 gltestapp : $(objects)
-	gcc -o glTestapp $(CFLAGS) -framework SDL2 -framework opengl $(objects)
+	gcc -o gltest.out $(CFLAGS) $(objects)
