--- a/Code_Example/functionality_testbed/makefile
+++ b/Code_Example/functionality_testbed/makefile
@@ -14,7 +14,7 @@ else
 	endif
 endif
 
-objects = main.o up_camera_module.o up_shader_module.o up_vertex.o up_filereader.o up_texture_module.o up_matrixTransforms.o up_utilities.o up_objectReader.o up_initGraphics.o up_ship.o
+objects = main.o up_menu.o testmodels.o up_camera_module.o up_shader_module.o up_vertex.o up_filereader.o up_texture_module.o up_matrixTransforms.o up_utilities.o up_objectReader.o up_initGraphics.o up_ship.o
 
 gltestapp : $(objects)
 	gcc -o gltest.out $(CFLAGS) $(objects)
