--- a/Code_Example/functionality_testbed/makefile
+++ b/Code_Example/functionality_testbed/makefile
@@ -8,14 +8,14 @@ ifeq ($(OS),Windows_NT)
 else
 	UNAME_S := $(shell uname -s)
 	ifeq ($(UNAME_S),Linux)
-		CFLAGS= -lSDL2 -lGL -lSDL2_image -lm -lSDL_net -lpthread
+		CFLAGS= -lSDL2 -lGL -lSDL2_image -lm -lSDL2_net -lpthread -lSDL2_mixer
 	endif
 	ifeq ($(UNAME_S),Darwin)
 		CFLAGS=-I$(IDIR_SDL2) -I$(IDIR_IMAGE) -I$(IDIR_NET) -F$(FDIR) -framework SDL2 -framework SDL2_image -framework SDL2_net -framework opengl
 	endif
 endif
 
-objects = main.o up_updateObjectMatrix.o up_menu.o testmodels.o up_camera_module.o up_shader_module.o up_vertex.o up_filereader.o up_texture_module.o up_matrixTransforms.o up_utilities.o up_objectReader.o up_initGraphics.o up_ship.o up_network_module.o up_thread_utilities.o up_assets.o up_modelRepresentation.o up_star_system.o up_render_engine.o gl_core_3_3.o up_font_module.o
+objects = main.o up_updateObjectMatrix.o up_menu.o testmodels.o up_camera_module.o up_shader_module.o up_vertex.o up_filereader.o up_texture_module.o up_matrixTransforms.o up_utilities.o up_objectReader.o up_initGraphics.o up_ship.o up_network_module.o up_thread_utilities.o up_assets.o up_modelRepresentation.o up_star_system.o up_render_engine.o gl_core_3_3.o up_font_module.o up_music.o
 
 gltestapp : $(objects)
 	gcc -o gltest.out $(CFLAGS) $(objects)
