--- a/server_test_udp/makefile
+++ b/server_test_udp/makefile
@@ -15,4 +15,4 @@ endif
 objects = main.o up_network_packet_utilities.o up_server.o up_thread_utilities.o up_vertex.o
 
 game_server : $(objects)
-	gcc -o game_server.out $(CFLAGS) $(objects)
+	gcc -o game_server.out $(objects) $(CFLAGS)
